# kbib_lib

./: .gitignore  LICENSE  README.md  exampe.yaml  pyproject.toml  req-ide.txt  req.txt
examples/: 1.yaml  1_needed.txt  2.yaml
src/kbib_lib/: __init__.py  __main__.py  bib_classes.py  main.py  process.py
