# python3 -m build

# thx PKH for this sysenvs:
# HTTP_PROXY="http://127.0.0.1:2080" HTTPS_PROXY="http://127.0.0.1:2080" python3 -m twine upload dist/*

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kbib_lib"
dynamic = ["version"]
authors = [
  { name="The220th", email="The220th@gmail.com" },
]
description = "Python lib for forming bibliography"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
  "pydantic",
  "pyyaml",
  "argparse",
]

[project.scripts]
kbib_lib = "kbib_lib.main:main"

[project.urls]
Homepage = "https://github.com/The220th/kbib_lib"
Issues = "https://github.com/The220th/kbib_lib/issues"

[tool.setuptools.dynamic]
version = {attr = "kbib_lib.__version__"}
